# Lichess-Win-Predictions

./: .gitignore  CLAUDE.md  _Dokumente_git_schach_dowload_lichess_positions.py1.stats  _Dokumente_git_schach_test.py1.stats  create_database.py  database.ipynb  games2  games2-journal  new.ipynb  pyproject.toml  readme.md  win_prob.ipynb
